# coastalme_TESTING

./: ..gitignore.kate-swp  .gitattributes  CShore_warnings.txt  README.md  callgrind.out.25458  cme.ini  codes.txt  do_doxygen.sh  fort.20  gmon.out  testAngle.tif.aux.xml  testHeight.tif.aux.xml  to_cygwin.sh  valgrind.txt
00_GRANADA _TO_TEST/00_ANDRES_LATEST/: non_consolidated_fine.asc
00_GRANADA _TO_TEST/in/: basement.asc  basement3.asc  consolidated_coarse.asc
Doxygen/: run_Doxygen.sh
Doxygen/html/: 2d__point_8cpp.html  2d__point_8cpp__incl.map  2d__point_8cpp__incl.md5  2d__point_8cpp_source.html  2d__point_8h.html  2d__point_8h__dep__incl.map  2d__point_8h__dep__incl.md5  2d__point_8h_source.html  2d__shape_8cpp.html  2d__shape_8cpp__incl.map  2d__shape_8cpp_source.html  2d__shape_8h.html  2d__shape_8h__dep__incl.map  2d__shape_8h__dep__incl.md5  2d__shape_8h__incl.map  2d__shape_8h__incl.md5  2d__shape_8h_source.html  2di__point_8cpp.html  2di__point_8cpp__incl.map  2di__point_8cpp_source.html  2di__point_8h.html  2di__point_8h__dep__incl.map  2di__point_8h__dep__incl.md5  2di__point_8h_source.html  2di__shape_8cpp.html  2di__shape_8cpp__incl.map  2di__shape_8cpp_source.html  2di__shape_8h.html  2di__shape_8h__dep__incl.map  2di__shape_8h__dep__incl.md5  2di__shape_8h__incl.map  2di__shape_8h_source.html  annotated.html  assign__landforms_8cpp.html  assign__landforms_8cpp__incl.map  assign__landforms_8cpp__incl.md5  assign__landforms_8cpp_source.html  calc__curvature_8cpp.html  calc__curvature_8cpp__incl.map  calc__curvature_8cpp_source.html  (+537 more)
Doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  files_b.js  files_c.js  files_d.js  functions_0.js  functions_1.js  (+38 more)
cshore/: ODOC  clean.sh  cshore_usace_linux.out  cshore_usace_win.out  infile  infileTemplate  scr.txt
cshore/exe_output/: OBPROF  OCRVOL  ODOC  OENERG  OPARAM  OSETUP  OXMOME  OXVELO  OYVELO
cshore/lib_output/: OENERG  OPARAM  OSETUP  OYMOME  OYVELO
in/: CliffFineBays.qgs  DEM_grid.shp  DEM_grid.shx
in/CliffFineBays/: consolidated_fine_01.asc.aux.xml
in/CliffFineRectilinear/: CliffFineRectilinear.qgs  consolidated_fine_01.asc  consolidated_fine_01.asc.aux.xml
in/CliffSandRectilinear/: CliffSandRectilinear.qgs  image_file_test.qgs
in/Happisburgh/: Happisburgh.qgz
in/Manuel_G02-001/: Manuel.qgz  stations_G02_001.dbf  stations_G02_001.shp  stations_G02_001.shx
in/Manuel_G02-001/bathymetry/: structuresElevation.geotiff  uncons_sed_sand_layer.geotiff
in/simple_fast/: basement_tif.tif  intervention_class.tif.aux.xml  intervention_height.tif.aux.xml  irregular_basement.tif  irregular_basement.tif.aux.xml  irregular_boundary.dbf  irregular_boundary.shp  mask.tif  two_bays_edge_missing.sdat  uniform.asc  uniform.asc.aux.xml
in/simple_fast/OLD/: irregular_boundary.shx  two_bays.asc.aux.xml  two_bays_edge_missing.mgrd  two_bays_edge_missing.sgrd  two_bays_edge_missing.sprj
in/simple_fast_with_bar/: bay.tif  bay_new.tif  bay_new_2.tif  deep_sea_waves.csv  deep_sea_waves.dbf  deep_sea_waves.shp  deep_sea_waves.shx  deep_sea_waves_converging.csv
in/simple_fast_with_intervention/: intervention_height.tif
in/simple_fast_with_spit/: curve_to_north.tif  curve_to_north_steeper.tif  curve_to_north_steepest.tif  deep_sea_wave_angle.tif  deep_sea_waves.dbf  deep_sea_waves.shp  deep_sea_waves.shx  deep_sea_waves_grid.shp  deep_sea_waves_plus_river.dbf  deep_sea_waves_plus_river.shp  deep_sea_waves_plus_river.shx  deep_sea_waves_plus_river_1.csv  deep_sea_waves_plus_river_1.dbf  deep_sea_waves_plus_river_1.shp  deep_sea_waves_plus_river_1.shx  notes.txt  one_bay_curve.dbf  one_bay_curve.shx  one_bay_curve_points.shp  spit_1.tif.aux.xml  spit_2.tif  two_bays.asc  two_bays.dbf  two_bays.shp
in/simple_fast_with_spit/Gently_shelving/: curve_to_north.tif.aux.xml
in/simple_fast_with_spit/OLD/: bay_with_spit.tif  bay_with_spit.tif.aux.xml  curve_to_north.tif.aux.xml  deep_sea_wave_angle.tif.aux.xml  deep_sea_waves.dbf  (+15 more)
src/: 2d_point.cpp  2d_point.h  2d_shape.cpp  2d_shape.h  2di_point.cpp  2di_point.h  2di_shape.cpp  2di_shape.h  CMakeLists.txt  assign_landforms.cpp  calc_curvature.cpp  calc_external_forcing.cpp  calc_shadow_zones.cpp  calc_waves.cpp  cell.cpp  cell.h  cell_landform.cpp  cell_landform.h  cell_layer.cpp  cell_layer.h  cell_sediment.cpp  cell_sediment.h  cliff.cpp  cliff.h  cme.cpp  cme.h  coast.cpp  coast.h  coast_landform.cpp  coast_landform.h  coast_polygon.cpp  coast_polygon.h  cppcheck_advice.txt  create_polygons.cpp  create_profiles.cpp  do_beach_actual_sediment_movement.cpp  do_beach_estimate_actual_erosion.cpp  do_beach_potential_erosion.cpp  do_beach_within_polygon.cpp  do_cliff_collapse.cpp  (+42 more)
src/cmake/Modules/: FindCShoreLib.cmake  FindGFortranLibs.cmake
src/gdal_versions/: gis_raster_gdal_version_1.cpp  gis_utils_gdal_version_1.cpp  gis_utils_gdal_version_2.cpp  gis_vector_gdal_version_1.cpp  gis_vector_gdal_version_2.cpp
src/inc/: cshore.h
src/lib/: libcshore.a.DEBUG.CYGWIN  libcshore.a.DEBUG.LINUX  libcshore.a.DEBUG.LINUX.ARGINBOTHOUT  libcshore.a.DEBUG.LINUX.ARGINOUT  libcshore.a.DEBUG.LINUX.FILEINOUT  libcshore.a.RELEASE.CYGWIN  libcshore.a.RELEASE.LINUX  libcshore.a.RELEASE.LINUX.ARGINBOTHOUT  libcshore.a.RELEASE.LINUX.ARGINOUT  libcshore.a.RELEASE.LINUX.FILEINOUT  libcshore.so.DEBUG.LINUX.ARGINBOTHOUT  libcshore.so.DEBUG.LINUX.ARGINOUT  libcshore.so.DEBUG.LINUX.FILEINOUT  libcshore.so.RELEASE.LINUX.ARGINBOTHOUT  libcshore.so.RELEASE.LINUX.ARGINOUT  libcshore.so.RELEASE.LINUX.FILEINOUT
src/lib/f2003_versions/: libcshore.a.DEBUG.LINUX  libcshore.a.RELEASE.LINUX
src/lib/f77_versions/: libcshore.a.DEBUG.LINUX  libcshore.a.RELEASE.LINUX
test/: ConvertUnitsLib.f03  Makefile  convert  convertunitslib.mod  degctof.cpp
(+1 files in other folders)
